# qiao-jus

./: .gitignore  README.md  技术说明文档.md  操作说明文档.md  说明文档.md
docs/: 对话参考.txt  (+3 more)
knowledge-service/: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
knowledge-service/adapters/: mcp_server.py
knowledge-service/api/: main.py
knowledge-service/api/routes/: auth.py  graph.py  stats.py
knowledge-service/core/: security.py  tenant.py
knowledge-service/docs/: BUGFIX_LOG.md  OPENCLAW_INTEGRATION.md
knowledge-service/migrations/: env.py
knowledge-service/migrations/versions/: 21a0bdac63d2_add_user_role_and_display_name.py  2b075199f95c_add_enable_thinking_to_conversations.py  4dc56b5b074c_phase3_add_scope_user_id_to_documents_.py  afc2a56ca28e_baseline_with_reports_conversations_.py  c8f1a2b3d4e5_add_dataset_ids_to_conversations.py  d9e2f3a4b5c6_add_report_ids_to_conversations.py  e1f2a3b4c5d6_add_assistants.py
knowledge-service/models/: base.py
knowledge-service/pipeline/: celery_app.py  community.py  graph_build.py
knowledge-service/retrieve/: bm25.py  reranker.py
knowledge-service/schemas/: __init__.py  auth.py
knowledge-service/scripts/: create_user.py  e2e_smoke_test.py  init_db.py  openclaw_setup.sh  rebuild_graph_labels.py  seed_platform_data.py  start.sh  status.sh  stop.sh
knowledge-service/src/adapters/: mcp_server.py
knowledge-service/src/api/: deps.py  main.py
knowledge-service/static/: index.html
knowledge-service/storage/: postgres_sync.py  qdrant_client.py
knowledge-service/tests/: test_models.py  test_rules.py  test_schemas.py  test_skills.py  test_smoke.py  test_ws_helpers.py
(+148 files in other folders)
