[project]
name = "knowledge-service"
version = "0.1.0"
description = "Knowledge base + Knowledge graph service for OpenClaw integration"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Config
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.4.0",
    # DB
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    # Auth
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    # Vector & Graph
    "qdrant-client>=1.11.0",
    "neo4j>=5.23.0",
    # Object storage (Aliyun OSS)
    "oss2>=2.18.0",
    # LLM
    "litellm>=1.45.0",
    # Sparse retrieval (BM25 hybrid)
    "rank-bm25>=0.2.2",
    # Parsing
    "unstructured[pdf,docx,md]>=0.15.0",
    # Async tasks
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    # Utils
    "httpx>=0.27.0",
    "tenacity>=8.5.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "networkx>=3.2.0",
    # MCP
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.mypy]
mypy_path = "src"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
